        Reviewed by Darin.

http://bugs.webkit.org/show_bug.cgi?id=11815
        XPathEvaluator behavior does not match Firefox - substring() and empty element

        Test: fast/xpath/empty-string-substring.html

        * xml/XPathValue.cpp:
        (WebCore::XPath::Value::Value):
        * xml/XPathValue.h:
        Added a constructor taking const char*, so that string literals and arrays don't 
        get converted to boolean values.



git-svn-id: svn://svn.chromium.org/blink/trunk@19225 bbb929c8-8fbe-4397-9dbb-9b2b20218538