third_party/WebKit/WebCore/xml/XPathValue.h
@@ -48,6 +48,7 @@ namespace WebCore {
             Value(unsigned);
             Value(unsigned long);
             Value(double);
+            Value(const char*);
             Value(const String&);
             
             Type type() const { return m_type; }
